--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,8 @@
   
   
   .body {
-    height: 80%;
-    width: 80%;
+    height: 90%;
+    width: 90%;
     display: flex;
     justify-content: center;
   }
@@ -33,7 +33,7 @@
   }
   
   .body .slider-box {
-    width: 80%;
+    width: 100%;
     height: 100%;
     overflow: hidden;
     display: flex;
@@ -44,7 +44,7 @@
   
   .body .slider-box i {
     position: absolute;
-    font-size: 40px;
+    font-size: 35px;
     color: white;
     display: flex;
     top: 0;
@@ -57,7 +57,7 @@
   }
   
   .body .slider-box i:hover {
-    background-color: rgba(251, 251, 251, 0.034);
+    background-color: rgba(215, 25, 25, 0.034);
   }
   
   .body .slider-box .right {
@@ -71,25 +71,28 @@
   }
   
   .body .slider-box .tabs {
+    width: 80%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    bottom: 1px;
+    z-index: 3;
+    gap: 2%;
+    opacity: 1;
+    transition: all 0.8s;
+  }
+  
+  .body .slider-box .show {
     width: 100%;
     position: absolute;
     display: flex;
     justify-content: center;
-    bottom: 20px;
-    z-index: 1;
-    gap: 3%;
-    opacity: 0;
-    transition: all 0.4s;
-  }
-  
-  .body .slider-box .show {
-    position: absolute;
-    bottom: 10px;
-    height: 0px;
-    width: 100%;
+    bottom: 15px;
+    height: 100px;
+    border-radius: 50px;
     z-index: 3;
     height: 50px;
-  }
+    }
   
   .body .slider-box .show:hover .tabs {
     opacity: 1;
@@ -97,9 +100,14 @@
   
   .body .slider-box .tabs .tab {
     width: calc(100%/6);
-    background-color: rgba(255, 255, 255, 0.671);
-    height: 4px;
+    /* background-color: rgba(180, 166, 166, 0.671); */
+    background-color: blanchedalmond;
+    height: 6px;
     cursor: pointer;
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+
   }
   
   .body .slider-box .tabs .tab:hover {
